tests/NormalTests/paczka1/fuzzy1/63214634.err
Error in line 1: oZ8u5Z A735 25,6
Error in line 2: oZ8u5Z S116 31,1
Error in line 5: xk36D S116 90,5
Error in line 12: xk36D A735 65,5
Error in line 11: oZ8u5Z S152 83,1
Error in line 13: ZahiBaf S100 10,8
Error in line 24: oZ8u5Z A735 -4,2
Error in line 30: ZahiBaf S100 6,3
